<resources>
    <string name="app_name">Home\'s Helper</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="send">Send</string>
    <string name="todo">TODO</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="_100">0</string>
    <string name="forget_pas">Forget Pasword?</string>

    <string name="don_t_have_account">Don\'t have account...</string>
    <string name="logout">Logout</string>
    <string name="Number">Number</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="already_signed_in_login_here">Already Signed In ? Login Here</string>
    <string name="reset">Reset</string>
    <string name="tou_will_receive_an_email_to_reset_password">Tou Will Receive an Email To Reset Password</string>
    <string name="forNewAccount">\"This is not an register Email, you can crate new account \"</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="Username">UserName</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="become_a_service_provider">Become a Service Provider</string>
    <string name="become_a_customer">Become a Customer</string>
    <string name="electrician">Electrician</string>
    <string name="ac_mechanic">AC_Mechanic</string>
    <string name="carpenter">Carpenter</string>
    <string name="plumber">Plumber</string>
    <string name="car_mechanic">Car_Mechanic</string>
    <string name="com_repair">Com_Repair</string>
    <string name="mob_repair">Mob_Repair</string>
    <string name="upload_pic">Upload Pic</string>


    <array name="skills">
        <item>@string/electrician</item>
        <item>@string/ac_mechanic</item>
        <item>@string/carpenter</item>
        <item>@string/plumber</item>
        <item>Mob_Repair</item>
        <item>Computer Repair</item>
        <item>Car Mechanic</item>


    </array>
</resources>