<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF0000"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:background="#FF0000"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        >



        <LinearLayout

            android:id="@+id/reglayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/reg_rounded_layout">

            <TextView
                android:id="@+id/regTv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/registration"
                android:textAllCaps="true"
                android:textSize="30sp"
                android:textColor="#FF0000"
                android:textAlignment="center"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="40dp"
            android:background="@drawable/reg_rounded_layout"
            >

            <EditText
                android:id="@+id/fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/first_name"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:textColor="#ffffff"
                android:textColorHint="#FF0000"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/last_name"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:textColorHint="#FF0000"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="24dp"
                >
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textColor="#FF0000"
                    android:textSize="20sp"
                    android:layout_marginEnd="10dp"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textSize="20sp"
                    android:textColor="#FF0000"
                    android:layout_marginEnd="10dp"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Other"
                    android:textSize="20sp"
                    android:textColor="#FF0000"
                    />
            </RadioGroup>

            <EditText
                android:id="@+id/useremail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:textColorHint="#FF0000"/>

            <EditText
                android:id="@+id/mobilenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/phone"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:textColorHint="#FF0000"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/userpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:textColorHint="#FF0000"/>

            <EditText
                android:id="@+id/confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="24dp"
                android:textColorHint="#FF0000"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />

             <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/button_rounded"
                android:shadowColor="#FF0000"
                android:text="@string/submit"
                android:textSize="40sp"
                android:textStyle="bold" />


            </LinearLayout>
    </LinearLayout>
</RelativeLayout>